# radarmeetsvision

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.cfg
.devcontainer/: build_and_push_images.sh  devcontainer-all-packages.sh  devcontainer-optional-mounts.sh  devcontainer_all_packages.sh  install_ros_noetic_and_deps.sh  requirements.txt  userpref.blend
.devcontainer/blearn/: Dockerfile  devcontainer.json
.devcontainer/desktop/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
blearn/: README.md  blearn.py
blearn/config/: config.yml  config_mountain_area.yml  config_mountain_area_demo.yml  config_rhone.yml  config_rhone_demo.yml  config_rhone_dual.yml  config_road_corridor.yml  config_road_corridor_demo.yml  config_rural_area.yml  config_rural_area_demo.yml
blearn/src/: __init__.py  blender.py  paths.py  sun_calc.py
ci/: pr_evaluate_networks.bash  pr_train_networks.bash  pr_unittest.bash
radarmeetsvision/: __init__.py  dataset_helper.py  interface.py  utils.py
radarmeetsvision/metric_depth_network/: __init__.py  common.py
scripts/: train.py
scripts/configs/: train_metric_s.json  train_radar_b.json  train_radar_s.json
scripts/evaluation/: config.json  config_best.json  config_best_metric_b.json  config_best_metric_s.json  config_best_radar_b.json  config_best_radar_s.json  config_best_relative_b.json  config_best_relative_s.json  create_scatter_plot.py  create_scatter_plot_split.py  evaluate.py  evaluate_dataset.py  evaluate_uuv_all.bash  (+6 more)
tests/: context.py  test_blearndataset.py  test_interface.py  test_metric_depth_network.py
(+62 files in other folders)
